enum plain format and path url encoding